// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdName should render correctly on handleChange 1`] = `
<div>
  <div />
  <p>
    Wecome to the game 
    Lorena
  </p>
</div>
`;

exports[`AddName should render correctly onClick 1`] = `
<div>
  <div />
  <p>
    Wecome to the game 
  </p>
</div>
`;

exports[`AddName should render correctly without submit 1`] = `
<div>
  <div>
    <input
      data-name="userInput"
      onChange={[Function]}
      placeholder="Type your name here"
      type="text"
    />
    <button
      data-name="SubmitButton"
      id="button"
      onClick={[Function]}
      type="submit"
      value="Submit"
    >
      Submit
    </button>
  </div>
  <p />
</div>
`;
